@@ -214,7 +214,7 @@ mpc5200mbus_machine(mpc5200mbus *bus, i2c_event event)
                         next_state(bus, STATE_IDLE);
                         bus->msg = bus->cmsg = NULL;
                         bus->nmsg = bus->byte = 0;
-                        bus->done(bus->done_arg);
+                        bus->done(bus->done_arg_ptr);
                         break;
                     }
                     
@@ -627,7 +627,7 @@ mpc5200mbus_initialize(mpc5200mbus *i2c_bus)
  *     nmsg - number of messages
  *     msg - pointer to messages array
  *     done - function which is called when transfer is finished
- *     done_arg - arbitrary argument passed to done funciton
+ *     done_arg_ptr - arbitrary argument pointer passed to done funciton
  *
  * RETURNS:
  *     RTEMS_SUCCESSFUL if transfer initiated successfully, or error
@@ -635,13 +635,13 @@ mpc5200mbus_initialize(mpc5200mbus *i2c_bus)
  */
 rtems_status_code
 mpc5200mbus_i2c_transfer(mpc5200mbus *bus, int nmsg, i2c_message *msg,
-                     i2c_transfer_done done, uint32_t   done_arg)
+                     i2c_transfer_done done, void *done_arg_ptr)
 {
     if (bus->state == STATE_UNINITIALIZED)
         return RTEMS_NOT_CONFIGURED;
     
     bus->done = done;
-    bus->done_arg = done_arg;
+    bus->done_arg_ptr = done_arg_ptr;
     bus->cmsg = bus->msg = msg;
     bus->nmsg = nmsg;
     bus->byte = 0;
